# forest_cover

./: .gitignore  README.md  pyproject.toml
src/forest_cover/: Nested_K-Fold.py  data.py  experiments.py  train.py
tests/: test_forest_cover.py
