[tool.poetry]
name = "forest_cover"
version = "0.1.0"
description = ""
authors = ["Tatyana Mardvilko <mardvilko@gmail.com>"]

[tool.poetry.scripts]
train = "forest_cover.train:train"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "^1.1.0"
click = "^8.1.3"
mlflow = "^1.25.1"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
